manifests/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desafio-app
  labels:
    name: desafio-app
    environment: production
